{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 27,
  "lineage": "dd3cda02-7a2f-eda8-7ffd-fbf6e6c74d93",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f7209c1d7be792b1",
            "association_id": "eipassoc-00e2c849e353f3f43",
            "domain": "vpc",
            "id": "eipalloc-0f7209c1d7be792b1",
            "instance": "i-0660e88afe1c2f7e7",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-06c2884c9dcce02f0",
            "private_dns": "ip-10-10-0-231.ap-northeast-2.compute.internal",
            "private_ip": "10.10.0.231",
            "public_dns": "ec2-3-37-201-232.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.201.232",
            "public_ipv4_pool": "amazon",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-eip-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-eip-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2.aws_instance.public",
            "module.ec2.data.aws_ami.amazon_linux2_kernel_5",
            "module.sg.aws_security_group.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a633fd8200146fb",
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:instance/i-0859ac45a7e8c0094",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jsp-private",
            "id": "i-0859ac45a7e8c0094",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jsp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-066ff049826d34086",
            "private_dns": "ip-10-10-10-93.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.93",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-041c7fd47b74d4589",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-039db7c35b5743278",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-private-server"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-private-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ee57ddcc72a1984"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux2_kernel_5",
            "module.iam.aws_iam_instance_profile.private",
            "module.iam.aws_iam_role.jsp_private",
            "module.sg.aws_security_group.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a633fd8200146fb",
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:instance/i-0660e88afe1c2f7e7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0660e88afe1c2f7e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jsp-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06c2884c9dcce02f0",
            "private_dns": "ip-10-10-0-231.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.0.231",
            "public_dns": "ec2-15-164-245-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "15.164.245.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08a792e4fe74b6456",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d131410571d18fb4",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-server"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1f399edbaa9a93e"
            ]
          },
          "dependencies": [
            "module.ec2.data.aws_ami.amazon_linux2_kernel_5",
            "module.sg.aws_security_group.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-04ee57ddcc72a1984",
            "description": "private security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ee57ddcc72a1984",
            "ingress": [
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp HTTP(random test ip)",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp SMTP(random test ip)",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              }
            ],
            "name": "jsp-private-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-private-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:security-group/sg-0e1f399edbaa9a93e",
            "description": "public security group for jsp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1f399edbaa9a93e",
            "ingress": [
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp RDP(random test ip)",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              },
              {
                "cidr_blocks": [
                  "211.115.223.215/32"
                ],
                "description": "From jsp SSH(random test ip)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Self Refer",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "jsp-public-sg",
            "name_prefix": "",
            "owner_id": "057845469470",
            "revoke_rules_on_delete": false,
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-public-sg"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f2cac7fee821288",
            "domain": "vpc",
            "id": "eipalloc-05f2cac7fee821288",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-37-39-46.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.39.46",
            "public_ipv4_pool": "amazon",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-eip-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-eip-2a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:internet-gateway/igw-0abba93befdb3d2d5",
            "id": "igw-0abba93befdb3d2d5",
            "owner_id": "057845469470",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-igw"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-igw"
            },
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05f2cac7fee821288",
            "association_id": "eipassoc-04c242adef10cb5d1",
            "connectivity_type": "public",
            "id": "nat-088b4efe94b306a32",
            "network_interface_id": "eni-0912e15366f0600cd",
            "private_ip": "10.10.0.148",
            "public_ip": "3.37.39.46",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d131410571d18fb4",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-nat-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-0b7fcc463c1a0d536",
            "id": "rtb-0b7fcc463c1a0d536",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-088b4efe94b306a32",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:route-table/rtb-0bf412942803a728b",
            "id": "rtb-0bf412942803a728b",
            "owner_id": "057845469470",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0abba93befdb3d2d5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-rt"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sub_2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8855ded6bda6860",
            "route_table_id": "rtb-0b7fcc463c1a0d536",
            "subnet_id": "subnet-039db7c35b5743278"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri_sub_2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02103f60156cab051",
            "route_table_id": "rtb-0b7fcc463c1a0d536",
            "subnet_id": "subnet-0a8bef1abc953c136"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat_gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0209e163fd789effe",
            "route_table_id": "rtb-0bf412942803a728b",
            "subnet_id": "subnet-0d131410571d18fb4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub_sub_2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031f1294a46eadfc3",
            "route_table_id": "rtb-0bf412942803a728b",
            "subnet_id": "subnet-0f98d7470a89bfa69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pri_sub_2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-039db7c35b5743278",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-039db7c35b5743278",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2a"
            },
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pri_sub_2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0a8bef1abc953c136",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8bef1abc953c136",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2c"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pri-sub-2c"
            },
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "pub_sub_2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0d131410571d18fb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d131410571d18fb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2a"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2a"
            },
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "pub_sub_2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:subnet/subnet-0f98d7470a89bfa69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f98d7470a89bfa69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "057845469470",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2c"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-pub-sub-2c"
            },
            "vpc_id": "vpc-0fec3f70fae046c12"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:057845469470:vpc/vpc-0fec3f70fae046c12",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ee124c2b6d7c9984",
            "default_route_table_id": "rtb-04e7ef7ce35086571",
            "default_security_group_id": "sg-0eb7d049b8bbc10f4",
            "dhcp_options_id": "dopt-2cbef647",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fec3f70fae046c12",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e7ef7ce35086571",
            "owner_id": "057845469470",
            "tags": {
              "MadeBy": "jsp",
              "Name": "jsp-vpc"
            },
            "tags_all": {
              "MadeBy": "jsp",
              "Name": "jsp-vpc"
            }
          }
        }
      ]
    }
  ]
}